# parsing

./: .gitignore  good_proxies.csv  pyproject.toml
GuessBot/: bot.py  game.py  send.py  settings.py
avito_/: card.html  card_data.html  check_proxy.py  get_proxy.py  main.py  temp.py
avito_scrap/: arsenic1.py  arsenic2.py  arsenic3.py  code.html  req.py  seleniumreq.py  threads2.py  threads3.py  threds1.py
beautiful_soup/: bs4_1.py  bs4_2.py  bs4_3.py  bs4_4.py  bs4_5.py  bs_4_6.py  bs_4_7.py  bs_4_8.py  bs_4_9.py  index.html  lists.html  table.html
get_queries/: ajax_1.py  ajax_2.py  ajax_3.py  ajax_4.py  ajax_5.py  req2.py
job_scrap/: kwork_scrap.py  tech_spec.md
parsing/aiofiles/: aiofiles1.py
scraping/: aiofiles1.py  aiofiles2.py  aiofiles3.py  aiogram1.py  aiogram2.py  aiogram3.py  aioreq1.py  async1.py  async2.py  proxies.txt  req1.py  telegrambotapi1.py  telegrambotapi2.py  telegrambotapi3.py  telegrambotapi4.py  telegrambotapi5.py  telegrambotapi6.py  temp.py  typed_python.py  typed_python1.py  typed_python2.py
scraping/GuessBot/: bot.py  facts.py
selenium/: geckodriver_1.py  geckodriver_2.py  geckodriver_3.py  geckodriver_4.py  geckodriver_5.py
typed_python/: typed_python2.py
